--- a/index.html
+++ b/index.html
@@ -67,6 +67,12 @@
   </header>
 
   <main class="col-lg-10 offset-lg-1 mt-5">
+    <div id="msg" class="d-none alert alert-success alert-dismissible fade show" role="alert">
+      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+      <strong>USUÁRIO CADASTRADO</strong> 
+    </div>
+    
+    
     <section id="banner-topo" class="d-none d-md-block">
       <div id="carouselId" class="carousel slide" data-bs-ride="carousel">
         <ol class="carousel-indicators">
@@ -405,6 +411,13 @@
 
   
   <script src="js/custom.js"></script>
+
+  <script>
+    var alertList = document.querySelectorAll('.alert');
+    alertList.forEach(function (alert) {
+      new bootstrap.Alert(alert)
+    })
+  </script>
 
   
 </body>
